--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: mmconvert
 Version: 0.1-1
 Date: 2021-09-27
 Title: Mouse Map Converter
-Description: Convert mouse genome positions between the build 39 physical map and the Cox genetic map. <doi:10.1534/genetics.109.105486>
+Description: Function to convert mouse genome positions between the build 39 physical map and the Cox genetic map <doi:10.1534/genetics.109.105486>.
 Author: Karl W Broman [aut, cre] (<https://orcid.org/0000-0002-4914-6671>)
 Maintainer: Karl W Broman <broman@wisc.edu>
 Authors@R: person("Karl W", "Broman", role=c("aut", "cre"),
