--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
 Suggests:
     testthat,
     devtools,
-    roxygen2
+    roxygen2,
+    qtl2
 License: GPL-3
 URL: https://github.com/rqtl/mmconvert
 BugReports: https://github.com/rqtl/mmconvert/issues
