--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mmconvert
-Version: 0.4
-Date: 2023-03-22
+Version: 0.5-1
+Date: 2023-03-23
 Title: Mouse Map Converter
 Description: Function to convert mouse genome positions between the build 39 physical map and the Cox genetic map <doi:10.1534/genetics.109.105486>.
 Author: Karl W Broman [aut, cre] (<https://orcid.org/0000-0002-4914-6671>)
