--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mmconvert
-Version: 0.11-2
-Date: 2023-06-22
+Version: 0.12
+Date: 2025-05-13
 Title: Mouse Map Converter
 Description: Convert mouse genome positions between the build 39 physical map and the genetic map of Cox et al. (2009) <doi:10.1534/genetics.109.105486>.
 Author: Karl W Broman [aut, cre] (<https://orcid.org/0000-0002-4914-6671>)
